# PKP-Intercity-Train-Delay-Scraper

./: .gitignore  Dockerfile  LICENSE  README.md  get_delays.py  get_train_data.py  logger_config.py  pyproject.toml  requirements.txt  save_to_postgres.py
.github/workflows/: backup_patch.yml  scraper.yml
api/: main.py
docs/: index.html
docs/api/: index.html
docs/misc/: station_aliases.json  stations.json
misc/: stations.json
scripts/: patch_delays.py
sql/: create_tables.sql  setup_api.sql
