[project]
name = "intercity-delays"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "fastapi-cache2>=0.2.2",
    "playwright>=1.48.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.0.0",
    "slowapi>=0.1.9",
    "supabase>=2.0.0",
    "tzdata>=2025.3",
    "uvicorn>=0.30.0",
    "gunicorn>=22.0.0",
    "folium>=0.20.0",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
    "numpy>=2.4.4",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
]
